test-resources/invalid-project/src/main/java/test/group/id/RTLO.java
package test.group.id;

/**
 * ‮
 * Bidi characters above
 */
public class RTLO
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
